<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:core_ptr="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <com.supcon.mes.mbap.view.CustomAdView
        android:id="@+id/workCustomAd"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:tag="workCustomAd" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/workCustomAd"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/dp_10"
        android:alpha="0.7"
        android:background="@drawable/name_bg"
        android:gravity="right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/workName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_5"
            android:drawableLeft="@drawable/name_icon"
            android:drawablePadding="@dimen/dp_5"
            android:paddingTop="@dimen/dp_3"
            android:tag="workName"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_12sp"
            tools:text="曹阳飞" />

        <TextView
            android:id="@+id/workDepot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/workName"
            android:layout_marginRight="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_3"
            android:tag="workDepot"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_12sp"
            tools:text="开发部" />
    </LinearLayout>

    <ImageView
        android:id="@+id/eamSearchIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/dp_20"
        android:padding="@dimen/dp_8"
        android:src="@drawable/ic_search_cc"
        android:tag="eamSearchIv" />

    <com.supcon.common.view.ptr.PtrFrameLayout
        android:id="@+id/refreshFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:tag="refreshFrameLayout"
        app:ptr_keep_header_when_refresh="true"
        app:ptr_pull_to_fresh="false"
        app:ptr_ratio_of_header_height_to_refresh="1.2"
        app:ptr_resistance="1.7">
        <ScrollView
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/workCustomAd"
            android:fillViewport="true"
            android:scrollbars="none"
            android:tag="contentView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/scoreLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_15"
                    android:background="@drawable/score_bg"
                    android:gravity="center"
                    android:tag="scoreLayout">

                    <TextView
                        android:id="@+id/rankTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="rankTitle"
                        android:text="绩效排名"
                        android:textColor="#849ea4"
                        android:textSize="@dimen/fontSize_16sp" />

                    <TextView
                        android:id="@+id/rank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_toRightOf="@id/rankTitle"
                        android:tag="rank"
                        android:text="--"
                        android:textColor="#5b959e"
                        android:textSize="@dimen/fontSize_18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/scoreTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_30"
                        android:layout_toRightOf="@id/rank"
                        android:tag="scoreTitle"
                        android:text="个人绩效"
                        android:textColor="#849ea4"
                        android:textSize="@dimen/fontSize_16sp" />

                    <TextView
                        android:id="@+id/score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_toRightOf="@id/scoreTitle"
                        android:tag="score"
                        android:text="--"
                        android:textColor="#5b959e"
                        android:textSize="@dimen/fontSize_18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/workRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_5"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    android:tag="workRecycler"
                    tools:ignore="UnusedAttribute" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_30"
                    android:background="@color/white"
                    android:paddingStart="@dimen/dp_10"
                    android:paddingEnd="@dimen/dp_10">
                    <LinearLayout
                        android:id="@+id/rightLl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="5dp"
                            android:layout_height="13dp"
                            android:background="@color/themeColor"
                            android:tag="contentTitleIc" />
                        <TextView
                            android:id="@+id/contentTitleLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:tag="contentTitleLabel"
                            android:text="@string/main_current_work"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <RadioGroup
                        android:id="@+id/pendingRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/main_sh_frag_pending_radio_group"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/dp_10"
                        android:paddingEnd="@dimen/dp_10"
                        android:tag="pendingRadioGroup">

                        <RadioButton
                            android:id="@+id/pendingRBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:button="@null"
                            android:checked="true"
                            android:gravity="center"
                            android:tag="pendingRBtn"
                            android:text="@string/main_pending"
                            android:textColor="@drawable/sl_radio_text"
                            android:textSize="@dimen/fontSize_12sp" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:button="@drawable/ic_vertical"
                            android:clickable="false" />

                        <RadioButton
                            android:id="@+id/processedRBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:button="@null"
                            android:tag="processedRBtn"
                            android:text="@string/main_processed"
                            android:textColor="@drawable/sl_radio_text"
                            android:textSize="@dimen/fontSize_12sp" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:button="@drawable/ic_vertical"
                            android:clickable="false" />

                        <RadioButton
                            android:id="@+id/subordinatePendingRBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:button="@null"
                            android:tag="subordinatePendingRBtn"
                            android:text="@string/main_subordinates"
                            android:textColor="@drawable/sl_radio_text"
                            android:textSize="@dimen/fontSize_12sp" />
                    </RadioGroup>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/list_bg_color"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/pendingRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:tag="pendingRecycler"
                        android:visibility="visible"
                        tools:ignore="UnusedAttribute" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/processedRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:tag="processedRecycler"
                        android:visibility="gone"
                        tools:ignore="UnusedAttribute"/>
                    <LinearLayout
                        android:id="@+id/noDataLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/dp_10"
                        android:paddingBottom="@dimen/dp_10"
                        android:tag="noDataLayout"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/emptyIcon"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/main_ic_nodata"
                            android:tag="emptyIcon"
                            android:visibility="visible" />
                        <TextView
                            android:id="@+id/emptyContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_10"
                            android:gravity="center_horizontal"
                            android:tag="emptyContent"
                            android:text="@string/no_data"
                            android:visibility="visible" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_height="@dimen/dp_30"
                        android:layout_width="match_parent"
                        android:background="@color/white"
                        android:paddingStart="@dimen/dp_10"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="5dp"
                            android:layout_height="13dp"
                            android:background="@color/themeColor" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/main_warn_work"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/warnRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:tag="warnRecycler"
                        android:visibility="visible"
                        tools:ignore="UnusedAttribute" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </com.supcon.common.view.ptr.PtrFrameLayout>

</RelativeLayout>
